; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_22356.c_netbios_encode_name.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_22356.c_netbios_encode_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"malloc() failed\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @netbios_encode_name(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [16 x i8], align 16
  %6 = alloca i8, align 1
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @strlen(i8* %11)
  store i32 %12, i32* %10, align 4
  %13 = call i8* @malloc(i32 34)
  store i8* %13, i8** %7, align 8
  %14 = icmp eq i8* %13, null
  br i1 %14, label %15, label %19

15:                                               ; preds = %2
  %16 = load i32, i32* @stderr, align 4
  %17 = call i32 @fprintf(i32 %16, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %18 = call i32 @exit(i32 -1) #3
  unreachable

19:                                               ; preds = %2
  %20 = load i8*, i8** %7, align 8
  store i8* %20, i8** %8, align 8
  %21 = getelementptr inbounds [16 x i8], [16 x i8]* %5, i64 0, i64 0
  %22 = load i8*, i8** %3, align 8
  %23 = call i32 @strncpy(i8* %21, i8* %22, i32 15)
  %24 = load i8*, i8** %8, align 8
  %25 = getelementptr inbounds i8, i8* %24, i32 1
  store i8* %25, i8** %8, align 8
  store i8 32, i8* %24, align 1
  store i32 0, i32* %9, align 4
  br label %26

26:                                               ; preds = %63, %19
  %27 = load i32, i32* %9, align 4
  %28 = icmp slt i32 %27, 16
  br i1 %28, label %29, label %66

29:                                               ; preds = %26
  %30 = load i32, i32* %9, align 4
  %31 = icmp eq i32 %30, 15
  br i1 %31, label %32, label %35

32:                                               ; preds = %29
  %33 = load i32, i32* %4, align 4
  %34 = trunc i32 %33 to i8
  store i8 %34, i8* %6, align 1
  br label %47

35:                                               ; preds = %29
  %36 = load i32, i32* %9, align 4
  %37 = load i32, i32* %10, align 4
  %38 = icmp slt i32 %36, %37
  br i1 %38, label %39, label %45

39:                                               ; preds = %35
  %40 = load i32, i32* %9, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds [16 x i8], [16 x i8]* %5, i64 0, i64 %41
  %43 = load i8, i8* %42, align 1
  %44 = call signext i8 @toupper(i8 signext %43)
  store i8 %44, i8* %6, align 1
  br label %46

45:                                               ; preds = %35
  store i8 32, i8* %6, align 1
  br label %46

46:                                               ; preds = %45, %39
  br label %47

47:                                               ; preds = %46, %32
  %48 = load i8, i8* %6, align 1
  %49 = sext i8 %48 to i32
  %50 = ashr i32 %49, 4
  %51 = and i32 %50, 15
  %52 = add nsw i32 %51, 65
  %53 = trunc i32 %52 to i8
  %54 = load i8*, i8** %8, align 8
  %55 = getelementptr inbounds i8, i8* %54, i32 1
  store i8* %55, i8** %8, align 8
  store i8 %53, i8* %54, align 1
  %56 = load i8, i8* %6, align 1
  %57 = sext i8 %56 to i32
  %58 = and i32 %57, 15
  %59 = add nsw i32 %58, 65
  %60 = trunc i32 %59 to i8
  %61 = load i8*, i8** %8, align 8
  %62 = getelementptr inbounds i8, i8* %61, i32 1
  store i8* %62, i8** %8, align 8
  store i8 %60, i8* %61, align 1
  br label %63

63:                                               ; preds = %47
  %64 = load i32, i32* %9, align 4
  %65 = add nsw i32 %64, 1
  store i32 %65, i32* %9, align 4
  br label %26

66:                                               ; preds = %26
  %67 = load i8*, i8** %8, align 8
  store i8 0, i8* %67, align 1
  %68 = load i8*, i8** %7, align 8
  ret i8* %68
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @strncpy(i8*, i8*, i32) #1

declare dso_local signext i8 @toupper(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
